--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="Utf-8">
 		<title>Assignment Solution for Module 2</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="css/external.css">
 	</head>
 	<body>
